--- a/views/home.html
+++ b/views/home.html
@@ -1,13 +1,5 @@
-<html ng-app="home">
-  <head>
-	<title>Real Time Private Chatting : Codershood</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css"> 
-	<link rel="stylesheet" href="angularjs-toaster/toaster.min.css" />
 
-  </head>
-  <body ng-controller="home">    
+  <div ng-controller="home">    
 	<div class="body">
 	  
 		<div class="rows">
@@ -229,16 +221,4 @@
 	<!-- 
 		Bootstrap modal starts
 	-->
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.min.js" ></script>
-
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js" ></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
-	<script type="text/javascript" src ="js/home_script.js"></script>
-
-  </body>
-</html>
+        </div>
