--- a/views/login.html
+++ b/views/login.html
@@ -1,13 +1,7 @@
-<html ng-app="login-register">
-  <head>
-      <title>Real Time Private Chatting : Codershood</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css"> 
-  </head>
-  <body ng-controller="login-register">
+
 
     <!-- Main Div Wrapper starts-->
-  	<div class="container index">
+  	<div class="container index" ng-controller="login-register">
 		
 		
   		<!-- 
@@ -110,10 +104,3 @@
 			</div>
 		</div>
 	</div>
-	
- <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
-  <script src = "js/script.js"></script>
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </body>
-</html>
